# jakar-engine

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
data/: fallbackSave.xcf  test.fs  test.vs
data/shader/: average_luminance.comp  blur.frag  blur_addition.frag  blur_cmp.comp  def_postprogress.fs  def_postprogress.vs  default_data.glsl  hdr_sorting.frag  light_culling.comp  lights.glsl  pbr_opaque.fs  pbr_opaque.vs  pbr_texture_factors.glsl  pbr_texture_sets.glsl  pbr_texture_usage.glsl  pre_depth.fs  pre_depth.vs  shadow.fs  shadow.vs  wireframe_simple.fs  wireframe_simple.vs
data/shader/input_info/: default_data.glsl  lights.glsl  pbr_texture_info.glsl
examples/scene_tree_performance/: main.rs
examples/simple_scene/: BlenderSave.blend  BlenderSave.blend1  Cargo.toml  Plane.mtl  main.rs  start_release.sh
examples/simple_scene/TestScene/: TestScene.gltf
examples/simple_scene/src/: main.rs
media/: Drawing_02_impress.odp  benchmark_data_raw.txt
src/: lib.rs
src/core/: engine_settings.rs  mod.rs  render_settings.rs
src/core/next_tree/: attributes.rs  content.rs  jobs.rs  mod.rs
src/core/resource_management/: asset_manager.rs  material_manager.rs  mesh_manager.rs  mod.rs  scene_manager.rs  texture_manager.rs
src/core/resources/: camera.rs  empty.rs  light.rs  material.rs  mesh.rs  mod.rs  texture.rs
src/core/simple_scene_system/: mod.rs  (+2 more)
src/input/: input_handler.rs  keymap.rs  mod.rs
src/render/: frame_system.rs  light_culling_system.rs  light_system.rs  mod.rs  pipeline.rs  pipeline_builder.rs  pipeline_manager.rs  post_progress.rs  pre_depth_system.rs  render_builder.rs  render_helper.rs  render_passes.rs  render_traits.rs  renderer.rs  shader_manager.rs  shader_set.rs  shadow_system.rs  uniform_manager.rs  window.rs
src/tools/: assimp_importer.rs  callbacks.rs  engine_state_machine.rs  gltf_importer.rs  mod.rs  node_tools.rs
(+48 files in other folders)
