[package]
name = "jakar-engine"
version = "0.1.0"
authors = ["Siebencorgie <siebencorgie@googlemail.com>"]

[dependencies]
winit = "0.7.0"
vulkano = "0.7.2"
vulkano-shaders = "0.7.2"
vulkano-shader-derive = "0.7.2"
vulkano-win = "0.7.2"

image = "0.17.0"
cgmath = "0.15.0"
collision = "0.12.0"
gltf-importer = "0.9.2"
gltf-utils = "0.9.2"
gltf = "0.9.2"
time = "0.1.37"

jakar-tree = { path = "jakar-tree" }

[[example]]
name = "simple"
path = "examples/simple_scene/main.rs"

[[example]]
name = "t_speed"
path = "examples/scene_tree_performance/main.rs"
